sfdx/force-app/main/default/objects/Integration_Log__c/fields/Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Id__c</fullName>
    <label>Log Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>