sfdx/force-app/main/default/objects/Integration_Log__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Text</type>
    <length>60</length>
</CustomField>