sfdx/force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>STARTED</fullName><default>false</default><label>STARTED</label></value><value><fullName>SUCCESS</fullName><default>false</default><label>SUCCESS</label></value><value><fullName>FAILED_VALIDATION</fullName><default>false</default><label>FAILED_VALIDATION</label></value><value><fullName>FAILED_API</fullName><default>false</default><label>FAILED_API</label></value><value><fullName>RETRYING</fullName><default>false</default><label>RETRYING</label></value><value><fullName>RECONCILED</fullName><default>false</default><label>RECONCILED</label></value></valueSetDefinition></valueSet>
</CustomField>