sfdx/force-app/main/default/objects/Integration_Log__c/fields/Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Name__c</fullName>
    <label>Workflow Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>