sfdx/force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Workflow_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Correlation_Id__c</columns>
    <columns>Started_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Integration Logs</label>
</ListView>